test/files/neg/t5365.check
t5365.scala:3: warning: match may not be exhaustive.
It would fail on the following input: None
  def nonExhautiveIfWeAssumeGuardsTrueOrFalse(x: Option[Int]): Int = x match {
                                                                     ^
t5365.scala:18: warning: match may not be exhaustive.
It would fail on the following input: None
  def extractor(x: Option[Int]) = x match {
                                  ^
error: No warnings can be incurred under -Werror.
2 warnings
1 error
